# emitman_project

./: db.sqlite3-shm  db.sqlite3-wal
code/backend/: README.md  aerich_config.py  db.py  db.sqlite3-shm  db.sqlite3-wal  main.py  pyproject.toml  settings.py
code/backend/migrations/db/: 0_20250715190021_init.py
code/backend/routers/: __init__.py  decanat.py  teacher.py
code/backend/schemas/: decanat_schemas.py  teacher_schemas.py
code/bot/: pyproject.toml
docs/: Проект ЭМИТМЕН.md
docs/.obsidian/: graph.json  workspace.json
docs/Backend/: Backend interlude.md  Строение бд.md
